Finally Data Rendered

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/dist/favicon.8b2f57bf.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="/dist/logo.726d37a8.png" />
+    <!-- <link rel="stylesheet" href="/dist/index.f7626f62.css">
+    <link rel="stylesheet" href="/dist/index.f836f417.css">
+    <link rel="stylesheet" href="/dist/index.f7626f62.css.map">
+    <link rel="stylesheet" href="/dist/index.f836f417.css.map">
+    <link rel="stylesheet" href="./try.css"> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Reciepe API Project</title>
+    <title>React Reciepe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -38,5 +43,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script src="/dist/index.62406edb.js"></script>
+    <script src="/dist/index.62406edb.js.map"></script> -->
   </body>
 </html>
